--- a/index.html
+++ b/index.html
@@ -3,96 +3,98 @@ layout: default
 title: ""
 ---
 <!-- Landing page - front page -->
-<div class="wrapper">
-	<div class="pure-g">
-		<div class="section pure-u-1" id="intro">
-			<div id="makerlab-text">
-				<h1>Brandeis MakerLab</h1>
-			</div>
-				<p>
-					Supporting educational, social and technological innovation, the Brandeis MakerLab enables students, faculty, and staff to improve the world by creating things with their hands, hearts, and minds.</p>
-		        <div class="mini">
-		            <div class="content">
-		            </div>
-		        </div>
+<div class="pure-g">
+	<div class="section pure-u-1" id="intro">
+		<div id="makerlab-text">
+			<h1>Brandeis MakerLab</h1>
 		</div>
+			<p>
+				Supporting educational, social and technological innovation, the Brandeis MakerLab enables students, faculty, and staff to improve the world by creating things with their hands, hearts, and minds.</p>
+	        <div class="mini">
+	            <div class="content">
+	            </div>
+	        </div>
 	</div>
-	<div class="pure-g">
-		<div class="pure-u-1 section" id="get-involved">
-			<h2>Get Involved!</h2>
-				<p>Brandeis MakerLab is a free-of-charge service open to the entire Brandeis community, located in the Farber Library Mezzanine, open during <a href="https://lts.brandeis.edu/location/hours/mainlibrary.html" target="_blank">library operating hours</a>. Stop by and check us out!
-				</p>
-			<div class="pure-g">
-				<div class="pure-u-1 pure-u-lg-1-5">
-					<h3><a href="/people">Join a club</a></h3>
-				</div>
-				<div class="pure-u-1 pure-u-lg-1-5">
-					<h3><a href="/mir">Become a Maker in Residence</a></h3>
-				</div>
-				<div class="pure-u-1 pure-u-lg-1-5">
-					<h3><a href="/resources">Use the lab for individual research and projects</a></h3>
-				</div>
-				<div class="pure-u-1 pure-u-lg-1-5">
-					<h3><a href="/news">Go to events</a></h3>
-				</div>
-				<div class="pure-u-1 pure-u-lg-1-5">
-					<h3><a href="mailto:makerlab@brandeis.edu">Research and coursework</a></h3>
-				</div>
-			</div>
-		</div>
-	</div>
+</div>
+<div class="pure-g">
+	<div class="pure-u-1 section" id="get-involved">
+		<h2>Get Involved!</h2>
+			<p>Brandeis MakerLab is a free-of-charge service open to the entire Brandeis community, located in the Farber Library Mezzanine, open during <a href="https://lts.brandeis.edu/location/hours/mainlibrary.html" target="_blank">library operating hours</a>. Stop by and check us out!
+			</p>
+		<div class="pure-g">
+			<div class="pure-u-1 pure-u-lg-1-5">
+				<div class="bg-text" data-bg-text="1">
+					<h3><a href="/people">Join a club</a>
+					</h3>
 
-	<!-- What we do section -->
-	<div class="pure-g">
-		<div class="pure-u-1 pure-u-md-1-2 makerlab-green section" id="activities">
-			<h2>What we do</h2>
-			<div class="features">
-				<section class="quadrant">
-					<span class="icon major fa-gear"></span>
-					<h3>Teaching & Learning</h3>
-					<p>Curricular lectures in emerging technology, <a href="/training">weekly trainings</a>, and <a href="https://sites.google.com/a/brandeis.edu/brandeis-makerlab-calendar/">workshops</a>.</p>
-				</section>
-				<section class="quadrant">
-					<span class="icon major fa-mortar-board"></span>
-					<h3>Research Technology</h3>
-					<p>Prototyping physical objects and new workflows, digitization, and digital fabrication.</p>
-				</section>
-				<section class="quadrant">
-					<span class="icon major fa-calendar"></span>
-					<h3>Hackathons & Events</h3>
-					<p>24 hour programming challenges and prototyping challenges, <a href="https://sites.google.com/a/brandeis.edu/brandeis-makerlab-calendar/">speaker series</a>, and sponsored maker in residence projects.</p>
-				</section>
-				<section class="quadrant">
-					<span class="icon major fa-child"></span>
-					<h3>Outreach</h3>
-					<p>Talks, tours, and building community.</p>
-				</section>
+				</div>
+			</div>
+			<div class="pure-u-1 pure-u-lg-1-5">
+				<h3><a href="/mir">Become a Maker in Residence</a></h3>
+			</div>
+			<div class="pure-u-1 pure-u-lg-1-5">
+				<h3><a href="/resources">Use the lab for individual research and projects</a></h3>
+			</div>
+			<div class="pure-u-1 pure-u-lg-1-5">
+				<h3><a href="/news">Go to events</a></h3>
+			</div>
+			<div class="pure-u-1 pure-u-lg-1-5">
+				<h3><a href="mailto:makerlab@brandeis.edu">Research and coursework</a></h3>
 			</div>
 		</div>
-		<div class="pure-u-1 pure-u-md-1-2 blue section" id="tools">
-			<h2>Tools we use</h2>
-			<div class="features">
-				<section class="quadrant">
-					<span class="icon major fa-print"></span>
-					<h3><a href="{{ site.url }}/resources#fabrication">Digital Fabrication</a></h3>
-					<p>Tools that physicalize the digital world (3D printers, laser cutters, CNC).</p>
-				</section>
-				<section class="quadrant">
-					<span class="icon major fa-cube"></span>
-					<h3><a href="{{ site.url }}/resources#scanning">Digitization and 3D Scanning</a></h3>
-					<p>Tools that digitize the real world (3D scanning, computer vision).</p>
-				</section>
-				<section class="quadrant">
-					<span class="icon major fa-eye"></span>
-					<h3><a href="{{ site.url }}/resources#vr-ar">Virtual and Augmented Reality</a></h3>
-					<p>Hardware and software for virtual reality and augmented reality (HMD, touch, gesture, and multiscreen environments).</p>
-				</section>
-				<section class="quadrant">
-					<span class="icon major fa-plug"></span>
-					<h3><a href="{{ site.url }}/resources#embedded-systems">Embedded Systems</a></h3>
-					<p>Hardware and software for prototyping embedded systems and robotics.</p>
-				</section>
-			</div>
+	</div>
+</div>
+
+<!-- What we do section -->
+<div class="pure-g">
+	<div class="pure-u-1 pure-u-md-1-2 makerlab-green section" id="activities">
+		<h2>What we do</h2>
+		<div class="features">
+			<section class="quadrant">
+				<span class="icon major fa-gear"></span>
+				<h3>Teaching & Learning</h3>
+				<p>Curricular lectures in emerging technology, <a href="/training">weekly trainings</a>, and <a href="https://sites.google.com/a/brandeis.edu/brandeis-makerlab-calendar/">workshops</a>.</p>
+			</section>
+			<section class="quadrant">
+				<span class="icon major fa-mortar-board"></span>
+				<h3>Research Technology</h3>
+				<p>Prototyping physical objects and new workflows, digitization, and digital fabrication.</p>
+			</section>
+			<section class="quadrant">
+				<span class="icon major fa-calendar"></span>
+				<h3>Hackathons & Events</h3>
+				<p>24 hour programming challenges and prototyping challenges, <a href="https://sites.google.com/a/brandeis.edu/brandeis-makerlab-calendar/">speaker series</a>, and sponsored maker in residence projects.</p>
+			</section>
+			<section class="quadrant">
+				<span class="icon major fa-child"></span>
+				<h3>Outreach</h3>
+				<p>Talks, tours, and building community.</p>
+			</section>
+		</div>
+	</div>
+	<div class="pure-u-1 pure-u-md-1-2 blue section" id="tools">
+		<h2>Tools we use</h2>
+		<div class="features">
+			<section class="quadrant">
+				<span class="icon major fa-print"></span>
+				<h3><a href="{{ site.url }}/resources#fabrication">Digital Fabrication</a></h3>
+				<p>Tools that physicalize the digital world (3D printers, laser cutters, CNC).</p>
+			</section>
+			<section class="quadrant">
+				<span class="icon major fa-cube"></span>
+				<h3><a href="{{ site.url }}/resources#scanning">Digitization and 3D Scanning</a></h3>
+				<p>Tools that digitize the real world (3D scanning, computer vision).</p>
+			</section>
+			<section class="quadrant">
+				<span class="icon major fa-eye"></span>
+				<h3><a href="{{ site.url }}/resources#vr-ar">Virtual and Augmented Reality</a></h3>
+				<p>Hardware and software for virtual reality and augmented reality (HMD, touch, gesture, and multiscreen environments).</p>
+			</section>
+			<section class="quadrant">
+				<span class="icon major fa-plug"></span>
+				<h3><a href="{{ site.url }}/resources#embedded-systems">Embedded Systems</a></h3>
+				<p>Hardware and software for prototyping embedded systems and robotics.</p>
+			</section>
 		</div>
 	</div>
 </div>
