--- a/training/index.html
+++ b/training/index.html
@@ -3,7 +3,7 @@ layout: page
 title:  "Training"
 ---
 <div class="pure-g">
-    <div class="pure-u-lg-1-2 pure-u-md-1 pure-u-1">
+    <div class="pure-u-lg-1-2 pure-u-md-1 pure-u-1 half-pad-right">
         <h2>How To Get Access</h2>
         <p>To gain swipe access into the Brandeis MakerLab, we ask that you attend one of our weekly training workshops in 3D Printing, 3D Scanning, or Embeded Systems and Soldering.</p>
 
